--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity
+                android:name=".Login"
+                android:label="@string/title_activity_login"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity android:name=".CadastroSala">
         </activity>
         <activity android:name=".CadastroFilme">
