--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,14 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:theme="@style/AppTheme">
+        <activity android:name=".Login">
+        </activity>
         <activity android:name=".Perfil">
         </activity>
         <activity android:name=".CadastroSessao">
         </activity>
         <activity android:name=".CadastroFilme">
         </activity>
-
         <activity android:name=".CadastroSala">
         </activity>
         <activity android:name=".MainActivity">
