--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 .externalNativeBuild
 .idea/codeStyles/Project.xml
 app/src/main/java/br/unitins/cinema/MainActivity.kt
+.idea/workspace.xml___jb_tmp___
