--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:theme="@style/AppTheme">
-        <activity android:name=".Login">
+        <activity android:name=".LoginUsuario">
         </activity>
         <activity android:name=".Perfil">
         </activity>
