--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,16 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:theme="@style/AppTheme">
+        <activity android:name=".activity_salas">
+        </activity>
+        <activity
+                android:name=".salas"
+                android:label="@string/title_activity_salas"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity android:name=".LoginUsuario">
         </activity>
-        <activity android:name=".Perfil">
+        <activity android:name=".Gerencia">
         </activity>
         <activity android:name=".CadastroSessao">
         </activity>
